--- a/src/Compotents/Contact/Contact.css
+++ b/src/Compotents/Contact/Contact.css
@@ -2,10 +2,88 @@
 .shadow-custom{
     box-shadow: -1px 3px 9px grey;
     margin-top: 100px;
-    border: 2px solid gray;
     padding: 100px;
+    background-color: #F8FAFF;
     width: 700px;
-    margin-left: 600px;
+    margin-left: 314px;
     margin-bottom: 150px;
-    border-radius: 30px;
+    border-radius: 10px;
+}
+.shadow-custom h3{
+    margin-bottom: 30px;
+}
+/* This is use for changing contact input style */
+.contact-input input{
+    padding: 16px;
+    display: block;
+    width: 416px;
+    margin-bottom: 26px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 5px #80808040;
+}
+/* This is use for changing contact TextArea style */
+.contact-input textarea{
+    padding: 16px;
+    display: block;
+    width: 416px;
+    margin-bottom: 26px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 5px #80808040;
+}
+/* This is use for Send Message button */
+.button-send{
+    background-color: #ff1f59;
+    padding: 10px 20px;
+    color: white;
+    display: block;
+}
+/* This is use for Send Message button  hover*/
+.button-send:hover{
+    background-color: #e0003c;
+    padding: 15px 25px;
+    color: white;
+}
+
+/* This is use for contact info in the cotact page */
+.contact-info{
+    margin-left: 148px;
+    margin-top: 100px;
+}
+/* Contact Phone Div */
+.contact-phone-div{
+    width: 300px;
+    background-color: #E5F8F6;
+    height: 250px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 20px;
+    flex-direction: column;
+}
+/* Contact Mail Div */
+.contact-Mail-div{
+    width: 300px;
+    background-color: #FFF0EA;
+    height: 250px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 20px;
+    flex-direction: column;
+}
+/* Contact Adress Div */
+.contact-address-div{
+    width: 300px;
+    margin-bottom: 20px;
+    background-color: #F3FAF2;
+    height: 250px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
